--- a/examples/seneca/binary/binary.html
+++ b/examples/seneca/binary/binary.html
@@ -277,7 +277,12 @@ boolean stringsEqual(String str1, String str2)
 	return true;
 }
 
-</script><canvas style="border:1px solid black" width="400" height="400"></canvas></p>
+</script><canvas width="400" height="400"> </canvas></p><div align="right">DIV:<canvas style="border:1px solid black" width="400" height="400"></canvas></div>
+<table width="100%" align="center" border="1">
+  <tr>
+    <td align="center"><canvas width="400" height="400"> </canvas></td>
+  </tr>
+</table>
 <div style="height:0px;width:0px;overflow:hidden;"></div>
 
 <pre><b>// Test written by <a href="http://asalga.wordpress.com/">Andor Salga</a></b>
